apps/wireguard/middleware-vpn-only.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vpn-only
  namespace: wireguard
spec:
  ipAllowList:
    sourceRange:
      - 100.64.0.0/10
