apps/wireguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-access-server
  namespace: wireguard
spec:
  type: ClusterIP
  selector:
    app: wg-access-server
  ports:
    - name: http
      port: 8000
      targetPort: 8000
