apps/wireguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wg-access-server
  namespace: wireguard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: wireguard-lan-or-vpn@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: vpn.sakul-flee.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wg-access-server
                port:
                  number: 8000
  tls:
    - hosts:
        - vpn.sakul-flee.de
      secretName: vpn-sakul-flee-de-tls
